# Tomb1Main

data/tr2/ship/shaders/: 3d.glsl
docs/tr1/: CHANGELOG.md  README.md
docs/tr2/: CHANGELOG.md  README.md  progress.txt
src/libtrx/: meson.build  meson.options
src/libtrx/engine/: audio_stream.c
src/libtrx/game/anims/: frames.c
src/libtrx/game/console/cmd/: give_item.c
src/libtrx/game/level/: common.c
src/libtrx/gfx/3d/: 3d_renderer.c
src/libtrx/include/libtrx/gfx/: common.h
src/tr1/: meson.build  meson.options
src/tr1/game/: collide.c  gameflow.c  inject.c  items.c  level.c  output.c  output.h  overlay.c
src/tr1/game/game_flow/: sequencer.c
src/tr1/game/lara/: common.c  hair.c
src/tr1/game/objects/: common.c
src/tr1/game/objects/creatures/: bear.c  crocodile.c  natla.c  pierre.c  trex.c
src/tr1/game/objects/general/: pickup.c
src/tr1/game/phase/: phase_inventory.c
src/tr1/specific/: s_output.c
src/tr2/: meson.build
src/tr2/decomp/: decomp.c  savegame.c  skidoo.c  stats.c
src/tr2/game/: demo.c  effects.c  level.c  overlay.c
src/tr2/game/inventory_ring/: control.c
src/tr2/game/lara/: cheat.c  control.c  misc.h
src/tr2/game/objects/: vars.c
src/tr2/game/objects/creatures/: dragon.c
src/tr2/game/objects/general/: grenade.c  pickup.c
src/tr2/game/objects/vehicles/: boat.c
src/tr2/game/phase/: executor.c  phase_demo.c  phase_game.c
src/tr2/game/render/: hwr.c
src/tr2/game/savegame/: common.c
src/tr2/game/shell/: common.c
src/tr2/game/ui/widgets/: stats_dialog.c
src/tr2/global/: types_decomp.h  vars.c  vars.h
(+7 files in other folders)
